--- a/app/views/beobachtungen/index.html.erb
+++ b/app/views/beobachtungen/index.html.erb
@@ -18,9 +18,9 @@
         <h3 class="panel-title">Anzeigen</h3>
       </div>
       <ul class="list-group">
-		    <%= link_to "Alle", beobachtungen_path(:zugeordnet => "a") , class: "list-group-item" %>
-        <%= link_to "Zugeordnete", beobachtungen_path(:zugeordnet => "j") , class: "list-group-item" %>
-        <%= link_to "Neue", beobachtungen_path(:zugeordnet => "n") , class: "list-group-item" %>
+        <%= link_to "Alle", beobachtungen_path(:zugeordnet => "a") , class: params[:zugeordnet]=="a" ? "list-group-item active" : "list-group-item" %>
+        <%= link_to "Zugeordnete", beobachtungen_path(:zugeordnet => "j") , class:  params[:zugeordnet]=="j" ? "list-group-item active" : "list-group-item" %>
+        <%= link_to "Neue", beobachtungen_path(:zugeordnet => "n") , class:  params[:zugeordnet]=="n" ? "list-group-item active" : "list-group-item" %>
       </ul>
     </div>
     
