Tests laufen wieder

--- a/app/assets/stylesheets/transporte.css.scss
+++ b/app/assets/stylesheets/transporte.css.scss
@@ -21,3 +21,22 @@
   min-height: 50px;
   padding-left: 50px;
 }
+
+.calendar_transportabschnitt {
+  background-image: url('transportabschnitt2.png');
+  background-position: left center;
+  background-repeat: repeat-y;
+  background-size: 25px auto;
+  min-height: 25px;
+  padding-left: 50px;
+}
+
+.calendar_umschlag {
+  background-image: url('umschlag2.png');
+  background-position: left center;
+  background-repeat: no-repeat;
+  background-size: 25px auto;
+  height: 25px;
+  padding-left: 50px;
+  line-height: 50px;
+}
