Fehler in vorigem Commit behoben

--- a/app/views/beobachtungen/_form.html.erb
+++ b/app/views/beobachtungen/_form.html.erb
@@ -202,7 +202,7 @@
             <%= f.label :lok_beschreibung do %>
             Beschreibung der Lok <span class="glyphicon glyphicon-question-sign" data-toggle="tooltip" data-placement="right" title="z.B. Farbe, Aufschriften, Nummer, Eisenbahngesellschaft, Diesel oder elektrisch)"></span>
             <% end %>
-            <%= f.text_area :lok_beschreibung, placeholder:"z.B. dunkelrot mit weißen Streifen, BE-24", class: "form-control" %>
+            <%= f.text_field :lok_beschreibung, placeholder:"z.B. dunkelrot mit weißen Streifen, BE-24", class: "form-control" %>
           </div>
         </div>
         
