--- a/app/views/transportabschnitte/show.html.erb
+++ b/app/views/transportabschnitte/show.html.erb
@@ -26,7 +26,7 @@
 
   
     <% @transportabschnitt.orte.each do |dort| %>
-        <%= link_to dort, class: "btn btn-primary" %>  
+        <%= link_to dort, class: "btn btn-primary" %>,  
     <% end %>
   
     <%= form_tag transportabschnitt_path, method: 'get' do %>
