Abfragen nach Verkehrsmittel und Ort (mit variablem Umkreis) ermöglichen.
TODO: wiederum Mehrfachtreffer des geokit zur manuellen Auswahl schicken

--- a/app/views/abfragen/index.html.erb
+++ b/app/views/abfragen/index.html.erb
@@ -8,6 +8,7 @@
       <%= render "auswahl_panel", typ: "Verkehrsträger", auswahl: VERKEHRSTRAEGER_COMBOBOX %>
     </div>
     <div class="col-sm-4">
+      <%= render "ort_auswahl_panel" %>
       <%= render "auswahl_panel", typ: "Stoff", auswahl: @stoff_auswahl %>
     </div>
     <div class="col-sm-4">
