--- a/app/views/beobachtungen/_form.html.erb
+++ b/app/views/beobachtungen/_form.html.erb
@@ -36,31 +36,23 @@
           <div class="form-group">
             <%= f.label :ankunft_zeit, "Ankunftszeit" %>
             <div class='input-group date' id='datetimepicker-ankunft'>
-              <%= f.text_field :ankunft_zeit, start_year:1990, class: "form-control" %>
+              <%= f.text_field :ankunft_zeit, start_year:1999, class: "form-control" %>
               <span class="input-group-addon"><span class="glyphicon glyphicon-calendar"></span></span>
             </div>
           </div>
           <div class="form-group">
             <%= f.label :abfahrt_zeit, "Abfahrtszeit" %>
             <div class='input-group date' id='datetimepicker-abfahrt'>
-              <%= f.text_field :abfahrt_zeit, start_year:1990, class: "form-control" %>
+              <%= f.text_field :abfahrt_zeit, start_year:1999, class: "form-control" %>
               <span class="input-group-addon"><span class="glyphicon glyphicon-calendar"></span></span>
             </div>
           </div>
           <script type="text/javascript">
+            //javascript dafeur mehrfach benutzbar, also ausgelagert in setup_datetimepicker.js
+            setup_datetimepicker('#datetimepicker-ankunft')
+            setup_datetimepicker('#datetimepicker-abfahrt')
+            // keine Ahnung wozu das da ist?
             $(function () {
-                $('#datetimepicker-ankunft').datetimepicker({
-                    language: 'de'
-                });
-                $('#datetimepicker-abfahrt').datetimepicker({
-                    language: 'de'
-                });
-                $("#datetimepicker-ankunft").on("dp.change",function (e) {
-                  $('#datetimepicker-abfahrt').data("DateTimePicker").setMinDate(e.date);
-                });
-                $("#datetimepicker-abfahrt").on("dp.change",function (e) {
-                  $('#datetimepicker-ankunft').data("DateTimePicker").setMaxDate(e.date);
-                });
                 $('.glyphicon-question-sign').tooltip();
             });
           </script>
