--- a/app/views/beobachtungen/_form.html.erb
+++ b/app/views/beobachtungen/_form.html.erb
@@ -226,8 +226,15 @@
         </div>
         <div class="beobachtung_schiff">
           <div class="form-group">
-            <%= f.label :schiff_name, "Schiffsname" %>
-            <%= f.text_field :schiff_name, class: "form-control" %>
+            <div class="col-sm-12">
+              <%= f.label :schiff_name, "Schiffsname auswählen oder eingeben" %>
+            </div>
+            <div class="col-sm-6">
+              <%= f.select :schiff_id, options_for_select(@schiffe, @schiff_unbekannt), {}, class: "form-control" %>
+            </div>
+            <div class="col-sm-6">
+              <%= f.text_field :schiff_name, class: "form-control" %>
+            </div>
           </div>
           <div class="form-group">
             <%= f.label :schiff_beschreibung, "Beschreibung des Schiffs (Größe, Aussehen, ...)" %>
