Tests Orte, Orte bei Anlagen auch aus lat/lon-Koordinaten erzeugbar, Beitrag zu #37

--- a/app/views/anlagen/_form.html.erb
+++ b/app/views/anlagen/_form.html.erb
@@ -1,6 +1,6 @@
 <%= form_for(@anlage) do |f| %>
 
-  <%= hidden_field_tag :redirect_params, @redirect_params %>
+   hidden_field_tag :redirect_params, @redirect_params
   <% if @anlage.errors.any? %>
     <div id="error_explanation">
       <h2><%= pluralize(@anlage.errors.count, "error") %> prohibited this anlage from being saved:</h2>
