--- a/app/views/anlagen/show.html.erb
+++ b/app/views/anlagen/show.html.erb
@@ -11,8 +11,9 @@
   <% unless @anlage.name.include?(@anlage.anlagen_kategorie.to_s) %>
     <%= @anlage.anlagen_kategorie %>
   <% end %>
-  <% unless @anlage.name.include?(@anlage.ort.to_s) %>
-    in <%= @anlage.ort %>
+  <!-- unless @anlage.name.include?(@anlage.ort.to_s) -->
+  <% if @anlage.ort %>
+    in <%= @anlage.ort.to_s %>
   <% end %>
   </small>
 </h1>
