Show Ortskoordinaten im AnlagenView statt anlage.lat/anlage.lon

--- a/app/views/anlagen/_form.html.erb
+++ b/app/views/anlagen/_form.html.erb
@@ -61,6 +61,7 @@
         </div>
       </div>
     
+      <!-- TODO: noch auf ort.lat/ort.lon umstellen -->
       <div class="panel panel-default" id="mapedit" >
         <div class="panel-heading">
           <h2 class="panel-title">Standort</h2>
