--- a/app/views/anlagen/new.html.erb
+++ b/app/views/anlagen/new.html.erb
@@ -1,5 +1,5 @@
-<h1>New anlage</h1>
+<h1>Neue Atomanlage</h1>
 
 <%= render 'form' %>
 
-<%= link_to 'Back', anlagen_path %>
+<%= link_to 'Alle Anlagen ansehen', anlagen_path %>
