Orte zu Umschlaegen, Layoutverbesserungen Umschlaege

--- a/app/views/transportabschnitte/_form.html.erb
+++ b/app/views/transportabschnitte/_form.html.erb
@@ -1,6 +1,6 @@
 <%= form_for(@transportabschnitt) do |f| %>
   <div class="btn-group header-buttons", class: "btn btn-primary">
-     <%= f.submit %>
+     <%= f.submit "Abschnitt speichern", class:"btn btn-success" %>
   </div>
   
   <h3> Transportabschnitt </h3>
